# dct-cryptonets

./: .gitignore  LICENSE  README.md  env.yml  environment.yml  environment_PT-map-sf.yml  install_datasets.sh  install_libjpegturbo.sh  pyproject.toml
compressed-cryptonets/: configs.py  homomorphic_eval.py  io_utils.py  run_homomorphic_eval.sh  run_test_imagenet.sh  run_test_simple.sh  run_train_imagenet.sh  run_train_one_shot.sh  run_train_simple.sh  test_simple.py  train_imagenet.py  train_one_shot.py  train_simple.py
compressed-cryptonets/data/: __init__.py  cvfunctional.py  cvtransforms.py  dataloader_imagenet_dct.py  datamgr.py  dataset.py  dataset_imagenet_dct.py
compressed-cryptonets/filelists/miniImagenet/: download_miniImagenet.sh  make_json.py
compressed-cryptonets/methods/: baselinefinetune.py  baselinetrain.py  meta_template.py
compressed-cryptonets/models/: __init__.py  backbone.py  mobilenetv2.py  pkn.py  polykervnet.py  utils.py
compressed-cryptonets/models/other_models/: cifar10_resnet.py  imagenet_resnet.py  resnet18.py
compressed-cryptonets/scripts/: ConvolutionalNeuralNetwork.py  export_onnx.py  measure_macs_fp_bp_time.py  robust_concrete_example.py
compressed-cryptonets/utils/: misc.py
dct-cryptonets/: homomorphic_eval.py  io_utils.py  run_homomorphic_eval.sh  run_homomorphic_eval_resnet20.sh  run_homomorphic_eval_resnet20_imagenette.sh  run_train.sh  train.py  utils.py
dct-cryptonets/data/: __init__.py  cvfunctional.py  cvtransforms.py  datamgr.py  dataset.py  make_miniImageNet_json.py
dct-cryptonets/models/: backbone.py  utils.py
(+1 files in other folders)
