[tool.poetry]
name = "compressed-cryptonets"
authors = ["Arjun Roy <roy208@purdue.edu>"]
version = "0.1.0"
description = ""
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
numpy = "*"
torch = "*"
torchvision = "*"
PyTurboJPEG = "*"
Pillow = "*"
matplotlib = "*"
jpeg2dct = "*"
scikit-learn = "*"
tensorboardX = "*"
opencv-python = "*"
lmdb = "*"
pyarrow = "*"
scikit-image = "*"
concrete-ml = "^1.0.0"
#turbojpeg = {path = "../compressed-cryptonets/lib/libjpeg-turbo-3.0.1.tar.gz", develop = false}
jupyter = "^1.0.0"


[build-system]
#requires = ["poetry-core", "setuptools"]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#[tool.poetry.build]
#script = "build.py"
#generate-setup-file = true
